--- a/Exponential distribution.ipynb
+++ b/Exponential distribution.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "source": [
     "### Time between events\n",
-    "Since the above events are random and the exponential distribution deals with the time betwenn consecutive events, we first need to sort the events from low to high"
+    "Since the above events are random and the exponential distribution deals with the time between consecutive events, we first need to sort the events from low to high."
    ]
   },
   {
